--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@ button {
   width: 100vw;;
   background-color: black;
   color: white;
+  border: 1px solid red;
 }
 
 #Music {
@@ -235,6 +236,11 @@ button {
 }
 
 .player {
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
   margin: 10px;
 }
 
